# rust-boilerplate

./: .env.example  .gitignore  Cargo.toml  README.md  claude-context.md
migrations/: 001_create_users.sql
src/: config.rs  error.rs  main.rs
src/container/: mod.rs
src/database/: mod.rs
src/delivery/http/: router.rs
src/domain/health/: handler.rs  mod.rs
src/domain/health/model/: response.rs
src/domain/user/: handler.rs  mod.rs
src/domain/user/entities/: user.rs
src/domain/user/feature/: user_service.rs
src/domain/user/model/: request.rs  response.rs
src/domain/user/repository/: exists_by_email.rs  find_by_email.rs  find_by_id.rs  in_memory_impl.rs  list.rs  mod.rs  repository.rs  save.rs
src/handlers/: health.rs  users.rs
src/infrastructure/: logger.rs
src/middleware/: mod.rs
src/models/: user.rs
src/repositories/: in_memory_user_repository.rs  mod.rs
src/response/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs
src/tests/: mod.rs
